fixed creating executable file